# NeuroVerse

./: .env.example  .gitignore  Makefile  README.md  REVIEWER_START_HERE.md  VERSION  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/acquisition/: alpha_reactivity.py  artifacts.py  base.py  brainflow_adapter.py  channel_mapping.py  csv_replay_adapter.py  diagnostics.py  eeg_fixture.py  lsl_adapter.py  lsl_discovery.py  marker_collector.py  markers.py  pipeline.py  simulator.py  timing.py  validation.py  xdf_replay_adapter.py
backend/app/api/: deps.py  routes_acquisition.py  routes_calibration.py  routes_config.py  routes_datasets.py  routes_evaluation.py  routes_hardware_trials.py  routes_health.py  routes_models.py  routes_replay.py  routes_runtime.py  routes_sessions.py  routes_shadow.py  routes_stream.py  websocket_manager.py
backend/app/core/: clock.py  config.py  engine.py  exceptions.py  logging.py  numeric.py  runtime_status.py  telemetry.py
backend/app/datasets/: __init__.py  base.py  clare_adapter.py  fixtures.py  generic_csv_adapter.py  label_mapping.py  physionet_mi_adapter.py  registry.py  schemas.py  synthetic_dataset.py  validation.py  windowing.py
backend/app/experiments/: __init__.py  config.py  runner.py  tracking.py
backend/app/features/: __init__.py  eeg_features.py  gaze_features.py  multimodal_features.py  physio_features.py
backend/app/fusion/: __init__.py  attention_fusion_stub.py  bayesian_fusion.py  late_fusion.py
backend/app/inference/: __init__.py  base.py  calibration.py  (+6 more)
(+1288 files in other folders)
